# resvg

./: .gitignore  Cargo.toml  README.md
bullet_svg/: Cargo.toml
bullet_svg/src/: lib.rs  main.rs
bullet_wasm/: Cargo.toml  LICENSE_MIT
bullet_wasm/pkg/: .npmrc  package.json
bullet_wasm/src/: lib.rs
bullet_wasm/www/: base64.js  build.sh  downloadBlob.js  index.html  index.js  log.js  package-lock.json  package.json  webfont.js  webpack.config.js
src/: main.rs
usvg/: Cargo.toml
usvg/src/: main.rs  options.rs
usvg/src/convert/: image.rs  marker.rs  mod.rs  units.rs
usvg/src/convert/text/: shaper.rs
usvg/src/svgtree/: parse.rs
usvg/src/tree/: export.rs  mod.rs  pathdata.rs
