[package]
name = "bullet_svg"
version = "0.1.0"
authors = ["Jon Hollander <jh@shapertools.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for non-wasm environments, may get error about load_fonts_dir not being found
# need to build fontdb lib with default features or "fs" feature in usvg/Cargo.toml to fix this
[dependencies]
svgtypes = "0.5"
usvg = { path = "../usvg", version = "0.12", default-features = false , features=["text","accurate-arcs"]}
# usvg = { path = "../usvg", version = "0.12", default-features = true }
include-dir-macro = "0.2"